--- a/src/gateway/comments/package.json
+++ b/src/gateway/comments/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "node",
+  "name": "comments",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.2"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.25.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.2"
-  }
+  "license": "ISC"
 }
