--- a/src/gateway/package.json
+++ b/src/gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node",
+  "name": "gateway",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.25.0",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "fast-gateway": "^3.1.1"
   }
 }
