private endpoint to fetch individual post

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       context: ./src/comments
     expose:
       - 5000
+    environment:
+      - POSTS=posts
     networks:
       - network
   
