--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
     networks:
       - network
   
-  gateway:
+  reverseproxy:
     build: 
-      context: ./src/gateway
+      context: ./src/reverseproxy
     ports:
       - 5000:5000
     environment:
